@@ -1,3 +1,7 @@
+2004-12-15 Jan Beulich  <jbeulich@novell.com>
+
+	* gas/elf/section5.[els]: New.
+
 2004-12-13  Richard Sandiford  <rsandifo@redhat.com>
 
 	* gas/mips/elf-rel25.d, gas/mips/elf-rel25a.d: Cope with different
